# ML-Zoomcamp

./: README.md  TillMeineke-ML_Zoomcamp2024_hw.url  main.py  requirements.txt  test
01-intro/: README.MD  homework.ipynb  homework.md  homework_01.ipynb
02-regression/: 02-regression.ipynb  homework.md  homework_02.ipynb
02-regression/.ipynb_checkpoints/: homework_02-checkpoint.ipynb
03-classification/: classification.ipynb  homework.md  homework_03.ipynb  notebook.ipynb
03-classification/.ipynb_checkpoints/: homework_03-checkpoint.ipynb
04-evaluation/: evaluation.ipynb  homework.md  homework_04.ipynb  notebook.ipynb
05-deployment/: Dockerfile  dockerfile  homework.md  homework_05.ipynb  hw-Q3.py  hw-Q4-test.ipynb  hw-Q4-test.py  hw-Q4.py  hw-Q6-test.py  hw-Q6.py  pyproject.toml  requirements.txt
05-deployment/.ipynb_checkpoints/: homework-checkpoint.md  notebook-checkpoint.ipynb
06-trees/: homework.md  trees.ipynb
06-trees/.ipynb_checkpoints/: homwork-checkpoint.ipynb
08-deep-learning/: ML-Zoomcamp - Shortcut.lnk  homework.md  homework_08.ipynb
09-serverless/: Dockerfile  hair_classifier_v1.onnx  handlers.py  homework.md  homework_09.ipynb  lambda_function.py  main.py  pyproject.toml  test.py
10-kubernetes/: README.md  deployment.yaml  homework.md  main.py  pyproject.toml  q6_test.py  service.yaml
